# Graph-Aware-Transformers

./: README.md  STRUCTURE.md  pyproject.toml  requirements.txt  utils.py
src/xgpt/: Attention_GNN.py  CG_Attention.py  MLP_GNN.py  __init__.py  custom_tokenizer.py  gnn_config.py  graph_neural_network.py  llama_decoder_layer_with_gnn.py  llama_for_causal_lm_with_gnn.py  llama_model_with_gnn.py  utils.py
xgpt/: gnn_config.py  llama_decoder_layer_with_gnn.py  llama_for_causal_lm_with_gnn.py  llama_model_with_gnn.py
